# haskell

./: README.md
w1/: README.md  w1.cabal
w1/src/: Task1.hs  Task2.hs
w2/: LICENSE  README.md  stack.yaml  w2.cabal
w2/src/: .task.hs.swp  Task2a.hs  Task2b.hs  Task2c.hs  Task3.hs  Task5.hs
w4/: README.md  benchmark.html  stack.yaml  w4.cabal
w4/.stack-work/install/x86_64-linux/lts-9.1/8.0.2/flag-cache/: base58-bytestring-0.1.0-29mjjeTHKSGSjQbSNgiSx  w4-0.1.0.0-AeXeviOzpZi7LFvYz05J6W
w4/.stack-work/install/x86_64-linux/lts-9.1/8.0.2/lib/x86_64-linux-ghc-8.0.2/base58-bytestring-0.1.0-29mjjeTHKSGSjQbSNgiSx/Data/ByteString/: Base58.dyn_hi  Base58.hi
w4/.stack-work/install/x86_64-linux/lts-9.1/8.0.2/lib/x86_64-linux-ghc-8.0.2/base58-bytestring-0.1.0-29mjjeTHKSGSjQbSNgiSx/Data/ByteString/Base58/: Internal.dyn_hi  Internal.hi
w4/.stack-work/install/x86_64-linux/lts-9.1/8.0.2/lib/x86_64-linux-ghc-8.0.2/w4-0.1.0.0-AeXeviOzpZi7LFvYz05J6W/: Task2.dyn_hi  Task3.dyn_hi  Task3.hi
w4/.stack-work/install/x86_64-linux/lts-9.1/8.0.2/pkgdb/: base58-bytestring-0.1.0-29mjjeTHKSGSjQbSNgiSx.conf  package.cache  w4-0.1.0.0-AeXeviOzpZi7LFvYz05J6W.conf
w4/app/: Val.hs  Wdec.hs  Wenc.hs
w4/benchmark/: Task3.hs
w4/src/: Lib.hs  Task2.hs  Task3.hs  Task4.hs
w5/: README.md  stack.yaml  w5.cabal
w5/src/: Task2.hs
w6/: README.md  w6.cabal
w6/.stack-work/install/x86_64-linux/nightly-2017-07-12/8.0.2/flag-cache/: abstract-deque-0.3-HsNSfU9Tgm8E1vVRMg1lQ0  abstract-par-0.3.3-FIXQeoD8JqS8Il9xkWRf07  cereal-0.5.4.0-BsAGxfp8yAs3CiRo2E875e  code-page-0.1.3-Fxfj8KlZt5M4CQMDwRDd5i  doctest-0.11.3-2Ca3zDdcXLCJ52fTmPnQxE  math-functions-0.2.1.0-KPr6PZcLbtiGnQNnW2g0oV  monad-par-0.3.4.8-4MpI1cnQuTR5IrG6dFwtI7  monad-par-extras-0.3.3-5IzzcdedS5bLAPIhSP2Ku6  mwc-random-0.13.6.0-FYg9HqO0pqB8vcniiPVzVy  vector-th-unbox-0.2.1.6-46ifXx3IRXQF8ghjmDE5S  w6-0.1.0.0-AkqX2ZOVBtj2xnurQZTlwX  w6-0.1.0.0-rgDalcKRIgBfU1OooegMG
w6/.stack-work/install/x86_64-linux/nightly-2017-07-12/8.0.2/lib/x86_64-linux-ghc-8.0.2/w6-0.1.0.0-AkqX2ZOVBtj2xnurQZTlwX/: Task2.dyn_hi  Task2.hi  Task3.dyn_hi  Task3.hi  Task4.dyn_hi  Task4.hi  Task5.dyn_hi  Task5.hi
w6/.stack-work/install/x86_64-linux/nightly-2017-07-12/8.0.2/lib/x86_64-linux-ghc-8.0.2/w6-0.1.0.0-W9Ugrx6kTHIl3x6l8azM/: Task2.dyn_hi  Task2.hi  Task3.dyn_hi  Task4.dyn_hi  Task5.hi
w6/.stack-work/install/x86_64-linux/nightly-2017-07-12/8.0.2/lib/x86_64-linux-ghc-8.0.2/w6-0.1.0.0-rgDalcKRIgBfU1OooegMG/: Lib.hi  Task2.dyn_hi  Task2.hi  Task3.dyn_hi  Task3.hi  Task4.dyn_hi  Task4.hi  Task5.dyn_hi  Task5.hi
w6/.stack-work/install/x86_64-linux/nightly-2017-07-12/8.0.2/pkgdb/: package.cache  w6-0.1.0.0-W9Ugrx6kTHIl3x6l8azM.conf
w6/src/: Task2.hs  Task3.hs  Task4 (copy).hs  Task4.hs  Task5.hs
w6/test/: Spec.hs
w7/: README.md  stack.yaml  w7.cabal
w7/.stack-work/install/x86_64-linux/nightly-2017-07-12/8.0.2/flag-cache/: w7-0.1.0.0-8GriCse3RVEHQHEpHHApr7  w7-0.1.0.0-9mHAeKRuVEZLRlInALuSV9  w7-0.1.0.0-KTs8FvvnrlVGWRWkCXQTWA  w7-0.1.0.0-bXxXCuABYP3q6A8oPpwOS
w7/.stack-work/install/x86_64-linux/nightly-2017-07-12/8.0.2/lib/x86_64-linux-ghc-8.0.2/w7-0.1.0.0-8GriCse3RVEHQHEpHHApr7/: Task2.dyn_hi  Task2.hi
w7/.stack-work/install/x86_64-linux/nightly-2017-07-12/8.0.2/lib/x86_64-linux-ghc-8.0.2/w7-0.1.0.0-9mHAeKRuVEZLRlInALuSV9/: Task2.dyn_hi  Task2.hi  Task3.dyn_hi  Task3.hi  Task4.dyn_hi  Task4.hi
w7/.stack-work/install/x86_64-linux/nightly-2017-07-12/8.0.2/lib/x86_64-linux-ghc-8.0.2/w7-0.1.0.0-KTs8FvvnrlVGWRWkCXQTWA/: Task2.dyn_hi  Task2.hi  Task3.dyn_hi  Task3.hi
w7/.stack-work/install/x86_64-linux/nightly-2017-07-12/8.0.2/lib/x86_64-linux-ghc-8.0.2/w7-0.1.0.0-bXxXCuABYP3q6A8oPpwOS/: Task2.dyn_hi  Task2.hi  Task3.dyn_hi  Task3.hi  Task4.hi
w7/src/: Lib.hs  Task2.hs  Task3.hs  Task4.hs
