name:                w1
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/thomas-souliotis/haskell/w1#readme
license:             BSD3
license-file:        LICENSE
author:              Thomas Souliotis
maintainer:          thomas7777@hotmail.gr
copyright:           2017 Thomas Souliotis
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs: src
  exposed-modules:
    Task1
  build-depends:
    base >= 4.3 && < 5,
    memory,
    containers==0.5.7.1
  default-language: Haskell2010

