name:                w2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/thomas-souliotis/haskell/w2#readme
license:             BSD3
license-file:        LICENSE
author:              Thomas Souliotis
maintainer:          thomas7777@hotmail.gr
copyright:           2017 Thomas Souliotis
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md


library
  hs-source-dirs: src
  exposed-modules:
    Task3,
    Task5
  build-depends:
    base >= 4.3 && < 5,
    cryptonite,
    bytestring,
    containers,
    QuickCheck,
    directory,
    text
  default-language: Haskell2010

executable task2a
  hs-source-dirs: src
  build-depends:
    base,
    containers,
    bytestring,
    cryptonite,
    directory
  main-is: Task2a.hs
  default-language: Haskell2010


executable task2b
  hs-source-dirs: src
  build-depends:
    base,
    containers,
    bytestring,
    cryptonite,
    directory
  main-is: Task2b.hs
  default-language: Haskell2010

executable task2c
  hs-source-dirs: src
  build-depends:
    base,
    containers,
    bytestring,
    cryptonite,
    stm,
    directory
  main-is: Task2c.hs
  default-language: Haskell2010
