name:                w5
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/w4#readme
license:             BSD3
license-file:        LICENSE
author:              Thomas Souliotis
maintainer:          thomas7777@hotmail.gr
copyright:           2017 Thomas Souliotis
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md,
                     Task3and4.pdf

library
  hs-source-dirs: src
  exposed-modules:
    Task2
  build-depends:
    base >= 4.3 && < 5,
    mtl >=2.2.1 && <2.3,
    monadplus
  ghc-options:         -Wall
  default-language: Haskell2010
